tests/valid/definite/UnionType_Valid_1.whiley
// this is a comment!
define int|[int] as IntList

void System::main([string] args):
    IntList x
    x = 1
    print str(x)
    x = [1,2,3]
    print str(x)

